--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Daniel Christopher",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "mongoose": "^4.2.2"
   }
 }
